k8s/backend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demo-app
  labels:
    app: backend
specspec:
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
