k8s/db-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: demo-app
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
``
