k8s/frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: demo-app
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
